исправления согласно замечаниям куратора